[tool.poetry]
name = "rebalancer"
version = "0.1.0"
description = ""
authors = ["Pratyush <pratyushverma@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
